[fix]: project card img-box overflow

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -26,16 +26,16 @@ header {
     .col {
         position:relative;
         width: 341px;
-        height: 420px;
+        height: 430px;
+        margin: 10px auto;
         .card {
-            height: 400px;
-            margin: 10px 0;
             overflow: auto;
+            height: 100%;
             .img-box {
                 position: relative;
                 background-color: rgba($color: #000000, $alpha: .8);
                 box-shadow: 0 0 10px #000000;
-                overflow-x: auto;
+                // overflow-x: auto;
                 img {
                     object-fit: contain;
                     height: 190px;
@@ -48,11 +48,23 @@ header {
                 }
             }
             .card-body {
-                .card-text{
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    width: 185px;
+                .title-div,
+                .description-div {
+                    max-height: 50px;
+                    .card-title {
+                        text-overflow: ellipsis;
+                        // white-space: wrap;
+                        overflow: hidden;
+                        max-height: 50px;
+                    }
+                }
+                .description-div {
+                    .card-text{
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        width: 185px;
+                    }
                 }
 
             }
